# quote_typer

./: .gitignore  Cargo.toml  log2.txt
src/: lib.rs  main.rs  quote.rs  typing.rs
